Organized templates in folders. Compatibility with Woocommerce 3.x. Version bump

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,2 +1,7 @@
+Version 1.0.2
+Added Epsilon Framework
+Added Compatibility with Woocommerce 3.x
+Added Compatibility with Polylang
+
 Version 1.0.0
 Theme release!
