--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+Version 1.1.3
+Minor backend Tweaks
+Jquery update
+
 Version 1.1.2
 Fixed comment display
 Fixed security issues ( wp_nonce check, nopriv AJAX removed and check if user can manage options  )
